--- a/source/index.html
+++ b/source/index.html
@@ -12,14 +12,14 @@
       <div class="page-header__wrapper">
         <a class="page-header__logo-adaptive">
           <picture>
-            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
           </picture>
         </a>
         <a class="page-header__logo">
           <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
-        <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch"  tabindex="0"></label>
+        <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch"  tabindex="0"><span class="visually-hidden">Открыть меню</span></label>
       </div>
       <input type="checkbox" id="menu_switch" class="visually-hidden menu_switch">
       <div class="page-header__nav-wrapper">
@@ -53,7 +53,7 @@
           <p class="targets__description">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a class="targets__button" href="catalog-slim.html">Каталог Slim</a>
+          <a class="targets__button targets__button--slim" href="catalog-slim.html">Каталог Slim</a>
         </div>
         <div class="targets__item">
           <h3 class="targets__title targets__title--mass">Набор массы</h3>
@@ -61,7 +61,7 @@
             Заработать авторитет среди дворовых котов
             и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a class="targets__button" href="catalog-pro.html">Каталог Pro</a>
+          <a class="targets__button targets__button--mass" href="catalog-pro.html">Каталог Pro</a>
         </div>
       </section>
       <section class="product-description">
@@ -136,9 +136,9 @@
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#" tabindex="0"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <div class="page-footer__social social">
-          <a class="social__link social__link--vkontakte" href="#" tabindex="0"></a>
-          <a class="social__link social__link--instagram" href="#" tabindex="0"></a>
-          <a class="social__link social__link--facebook" href="#" tabindex="0"></a>
+          <a class="social__link social__link--vkontakte" href="#" tabindex="0"><span class="visually-hidden">ВКонтакте</span></a>
+          <a class="social__link social__link--instagram" href="#" tabindex="0"><span class="visually-hidden">инстаграм</span></a>
+          <a class="social__link social__link--facebook" href="#" tabindex="0"><span class="visually-hidden">фейсбук</span></a>
         </div>
         <div class="page-footer__developers developers">
           <a class="developers__item developers__item--text" href="https://htmlacademy.ru/intensive/adaptive" tabindex="0">HTML Academy</a>
