--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,14 +12,14 @@
       <div class="page-header__wrapper">
         <a class="page-header__logo-adaptive" href="index.html">
           <picture>
-            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
             <img class="page-header__icon" src="img/logo-mobile.png" alt="Логотип Cat Energy">
           </picture>
         </a>
         <a class="page-header__logo" href="index.html">
           <img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
-        <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch"  tabindex="0"></label>
+        <label class="page-header__menu-button page-header__menu-button--closed" for="menu_switch"  tabindex="0"><span class="visually-hidden">Открыть меню</span></label>
       </div>
       <input type="checkbox" id="menu_switch" class="visually-hidden menu_switch">
       <div class="page-header__nav-wrapper">
@@ -45,7 +45,7 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
                 <img src="img/chicken-small-mobile@1x.png" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="chicken 500g">
               </picture>
@@ -74,7 +74,7 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--big" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
                 <img src="img/chicken-big-mobile@1x.png" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="chicken 1000g">
               </picture>
@@ -103,7 +103,7 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
                 <img src="img/fish-small-mobile@1x.png" srcset="img/fish-small-mobile@2x.jpg 2x" alt="fish 500g">
               </picture>
@@ -132,7 +132,7 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--big" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
                 <img src="img/fish-big-mobile@1x.png" srcset="img/fish-big-mobile@2x.jpg 2x" alt="fish 1000g">
               </picture>
@@ -161,7 +161,7 @@
           <article class="catalog__item">
             <a class="catalog__link  catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
                 <img src="img/buckwheat-small-mobile@1x.png" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="buckwheat 500g">
               </picture>
@@ -190,7 +190,7 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--big" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
                 <img src="img/buckwheat-big-mobile@1x.png" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="buckwheat 1000g">
               </picture>
@@ -219,7 +219,7 @@
           <article class="catalog__item">
             <a class="catalog__link catalog__link--small" href="#">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
                 <img src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="buckwheat 500g">
               </picture>
@@ -262,7 +262,7 @@
                 </a>
                 <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
-                    <th class="table__column table__column--left">1 упаковка (100 г)</th>
+                    <th class="table__column table__column--left">1 Упаковка (100 г)</th>
                     <td class="table__column table__column--right">200 Р.</td>
                   </tr>
                 </table>
@@ -298,7 +298,7 @@
                 </a>
                 <table class="additional-goods__table table table--addictional">
                   <tr class="table__row">
-                    <th class="table__column table__column--left">1 Упаковка (30 г)</th>
+                    <th class="table__column table__column--left">1 упаковка (30 г)</th>
                     <td class="table__column table__column--right">300 Р.</td>
                   </tr>
                 </table>
@@ -330,9 +330,9 @@
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#" tabindex="0"><img src="img/logo-cat-enegry.svg" alt="Логотип Cat Energy"></a>
         <div class="page-footer__social social">
-          <a class="social__link social__link--vkontakte" href="#" tabindex="0"></a>
-          <a class="social__link social__link--instagram" href="#" tabindex="0"></a>
-          <a class="social__link social__link--facebook" href="#" tabindex="0"></a>
+          <a class="social__link social__link--vkontakte" href="#" tabindex="0"><span class="visually-hidden">ВКонтакте</span></a>
+          <a class="social__link social__link--instagram" href="#" tabindex="0"><span class="visually-hidden">инстаграм</span></a>
+          <a class="social__link social__link--facebook" href="#" tabindex="0"><span class="visually-hidden">фейсбук</span></a>
         </div>
         <div class="page-footer__developers developers">
           <a class="developers__item developers__item--text" href="https://htmlacademy.ru/intensive/adaptive" tabindex="0">HTML Academy</a>
